<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.view.ProfileActivity">
    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_avatar_cardView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="60dp"
                app:cardBackgroundColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true">
                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:background="@color/black"
                    android:contentDescription="@string/profile_avatar"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/profile_avatar_cardView"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Banana"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>
                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="banana@gmail.com"
                    android:textColor="@color/primary_green"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/textNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spaceNotification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/spaceNotification"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switchCompat"
                    app:layout_constraintStart_toEndOf="@+id/textNotification"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spaceNotification"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:paddingVertical="15dp"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:paddingVertical="15dp"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:paddingVertical="15dp"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:paddingVertical="15dp"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/sign_out"
                android:paddingVertical="30dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:drawableTint="@android:color/holo_red_light"
                app:drawableEndCompat="@drawable/ic_signout_icon" />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/design_bottom_navigation_height"
        android:layout_alignParentBottom="true">
        <include
            layout="@layout/activity_bottom_nav_bar"/>
    </RelativeLayout>

</RelativeLayout>